       * fixed #276197;     
       * fixed #255040;
       * fixed #259694;
       * updated jython to 2.5a3 hope it works better;
       * added delete account button so now delete key isn't the only way to delete a reg via GUI;       
       * modified advanced tab info boxes with message dialogs instead of older ugly frames;
       * the new adcs tab is an easy setup mode for adcs;    
       * main interface changed, frontpage changed more towards a hubsoft map; 
       * made the plugin gui list a little bit smaller;
       * dshub uses now the crypto library bouncycastle, http://www.bouncycastle.org
       * created initial ADCS support and adcs package;
       * fixed bug when empty command would crash onRawCommand on RSS feed plugin;
       * updated MINA to 2.0.0M3


*** Iota RC2 25.07.2008***
       * fixed Bm's D4 field rejection;
       * moved nick_chars to regexp;
       * fixed ru language file;
       * fixed more bugs;
       * fixed #250237
       * added a new configuration variable command_pm which can set if bot chat is sent to PM;
       * updated to system specific look and feel ( thanks quicksilver );
       * using java 1.6 ConcurrentHashMaps now;
       * fixed main bugs in dshub, like the "cid bug" and the ghost problem, message ordering;
       * updated MINA to 2.0.0M2 and it should work better now;
       * added timestamps to history and cmdhistory messages;
       * cleaned the build process, it should work via ant now;
       * changed to hashmaps for keeping users ( thanks cyb)
       * added ru_RU translation ( thanks lv77)
	   * fixed #231304;


*** Iota RC1 15.05.2008***
           * distro now includes rss reader plugin and lookup;
           * modified config to store the language setting;
           * added a box for language selecting via gui;
           * updated MINA to 1.1.7;
           * fixed warning on log4j;
           * rescan scripts button works now;
           * fixed reversed buttons in advanced page;